[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "scons>=3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[project]
name = "Cassiopee"
authors = [
  { name="ONERA", email="christophe.benoit@onera.fr" },
]
license = {text="GPLv3"}
description = "Computational Fluid Dynamics pre- and post-processing python modules"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Scientific/Engineering :: Physics"
]

[project.dependencies]
numpy = ">=1.23.3"
mpi4py = ">=3.1.3"
scons = ">=4.4.0"
KCore = {path = "Cassiopee/KCore"}
XCore = {path = "Cassiopee/XCore"}
Converter = {path = "Cassiopee/Converter"}
Geom = {path = "Cassiopee/Geom"}
Transform = {path = "Cassiopee/Transform"}
Generator = {path = "Cassiopee/Generator"}
Post = {path = "Cassiopee/Post"}
Initiator = {path = "Cassiopee/Initiator"}
Connector = {path = "Cassiopee/Connector"}
Distributor2 = {path = "Cassiopee/Distributor2"}
Dist2Walls = {path = "Cassiopee/Dist2Walls"}
RigidMotion = {path = "Cassiopee/RigidMotion"}
Compressor = {path = "Cassiopee/Compressor"}
Modeler = {path = "Cassiopee/Modeler"}
Intersector = {path = "Cassiopee/Intersector"}
Apps = {path = "Cassiopee/Apps"}

[project.optional-dependencies]
CPlot = {path = "Cassiopee/CPlot"}
OCC = {path = "Cassiopee/OCC"}

[project.urls]
Homepage = "https://github.com/onera/Cassiopee"
Issues = "https://github.com/onera/Cassiopee/issues"
