[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "scons>=3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[project]
name = "Cassiopee"
version = "4.0"
authors = [
  {name="ONERA", email="christophe.benoit@onera.fr"},
]
license = {text="LGPLv3"}
description = "Computational Fluid Dynamics pre- and post-processing python modules"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
    "numpy>=1.23.3",
    "mpi4py>=3.1.3",
    "scons>=4.4.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "KCore",
    "XCore",
    "Converter",
    "Geom",
    "Transform",
    "Generator",
    "Post",
    "Initiator",
    "Connector",
    "Distributor2",
    "Dist2Walls",
    "RigidMotion",
    "Compressor",
    "Modeler",
    "Intersector",
    "Apps",
    "CPlot" 
]

[project.urls]
Homepage = "https://github.com/onera/Cassiopee"
Documentation = "https://cassiopee.onera.fr/"
Repository = "https://github.com/onera/Cassiopee.git"
Issues = "https://github.com/onera/Cassiopee/issues"
